--- a/src/Club/UserBundle/Resources/views/AdminGroup/members.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/members.html.twig
@@ -23,7 +23,7 @@
     <tr>
       <td>{{ user.memberNumber }}</td>
       <td>{{ user.profile.firstName }} {{ user.profile.lastName }}</td>
-      <td>{{ user.createdAt|date("Y-m-d") }}</td>
+      <td>{{ user.createdAt|club_date }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_user_edit', { 'id':user.id })} %}
       </td>
