--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -43,7 +43,7 @@
       <td><input type="checkbox" name="ids[{{ user.id }}]"/></td>
       <td>{{ user.memberNumber }}</td>
       <td><a href="{{ path('admin_user_edit', {'id':user.id}) }}">{{ user.profile.firstName }} {{ user.profile.lastName }}</a></td>
-      <td>{{ user.createdAt|date("Y-m-d") }}</td>
+      <td>{{ user.createdAt|club_date }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_user_edit', { 'id':user.id })} %}
         {% include "ClubLayoutBundle:Default:ban_link.html.twig" with {'url':path('admin_user_ban', { 'id':user.id })} %}
