Translated welcome bundle.

--- a/src/Club/WelcomeBundle/Resources/views/AdminWelcome/form.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/AdminWelcome/form.html.twig
@@ -1,5 +1,5 @@
   <fieldset>
-    <legend>Welcome</legend>
+    <legend>{% trans %}Welcome{% endtrans %}</legend>
     <p>
       {{ form_label(form.content) }}<br />
       {{ form_widget(form.content, {'attr': {'class':'big' }}) }}
