--- a/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
@@ -17,6 +17,7 @@
 {% include "ClubShopBundle:Order:order_form.html.twig" %}
 {% include "ClubShopBundle:Order:order_history.html.twig" %}
 {% include "ClubShopBundle:Order:purchase_log.html.twig" %}
+{% include "ClubShopBundle:Order:shipping.html.twig" %}
 {% include "ClubShopBundle:Order:order_information.html.twig" %}
 
 {% endblock %}
