Fixed novalidate in tinymce form.

--- a/src/Club/WelcomeBundle/Resources/views/AdminWelcome/edit.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/AdminWelcome/edit.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
 <form method="post" action="{{ path('club_welcome_adminwelcome_edit', {'location_id':welcome.location.id}) }}">
-{% include "ClubWelcomeBundle:AdminWelcome:form.html.twig" with {'form': form} %}
+{% include "ClubWelcomeBundle:AdminWelcome:form.html.twig" %}
 </form>
 
 {% endblock %}
