--- a/src/Club/WelcomeBundle/Resources/views/AdminWelcome/form.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/AdminWelcome/form.html.twig
@@ -9,5 +9,5 @@
 
   </fieldset>
 
-  {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+  {% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'novalidate':true} %}
 
