Dont have special design for wrong login.

--- a/src/Club/MailBundle/Resources/views/Template/password_reset.html.twig
+++ b/src/Club/MailBundle/Resources/views/Template/password_reset.html.twig
@@ -2,6 +2,8 @@ Dear {{ user.profile.name }},
 
 You have requested to reset your password.
 
+Your member number is {{ user.memberNumber }}.
+
 Follow the link and you can reset your password.
 {{ url }}
 
