--- a/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
@@ -1,12 +1,7 @@
-{% extends "ClubUserBundle:Auth:base.html.twig" %}
+{% extends "ClubLayoutBundle:Default:base_simple.html.twig" %}
 
 {% block body %}
-        <div id="login-top"></div>
-
         <div id="login-box">
-
-                <!-- Logo -->
-                <p class="nom t-center"><a href="{{ path('homepage') }}"><img src="{{ asset('bundles/clublayout/images/logo.png') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
 
                 {% include "ClubLayoutBundle:Default:flash.html.twig" %}
 
