--- a/src/Club/UserBundle/Resources/views/Auth/forgot.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/forgot.html.twig
@@ -1,12 +1,7 @@
-{% extends "ClubUserBundle:Auth:base.html.twig" %}
+{% extends "ClubLayoutBundle:Default:base_simple.html.twig" %}
 
 {% block body %}
-        <div id="login-top"></div>
-
         <div id="login-box">
-
-                <!-- Logo -->
-                <p class="nom t-center"><a href="{{ path('homepage') }}"><img src="{{ asset('bundles/clublayout/images/logo.png') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
 
                 <!-- Messages -->
                 <p class="msg info">{% trans %}Enter your username or email address, and you will receive a reset password email within a few minutes.{% endtrans %}</p>
@@ -15,22 +10,15 @@
                 <form method="POST" action="{{ path('auth_forgot') }}">
                 <table class="nom nostyle">
                         <tr>
-                          <td style="width:75px;"><label for="login-user"><strong>{{ form_label(form.username,'Username or email'|trans) }}</strong></label></td>
-                          <td>{{ form_widget(form.username) }}</td>
+                          <td style="width:200px;"><label for="login-user"><strong>{{ form_label(form.username,'Username or email'|trans) }}</strong></label></td>
+                          <td>{{ form_widget(form.username, {'attr': {'class':'input-text' }}) }}</td>
                         </tr>
                         <tr>
                                 <td colspan="2" class="t-right"><input type="submit" class="input-submit" value="{% trans %}Send Password{% endtrans %} &raquo;" /></td>
-                        </tr>
-                        <tr>
-                                <td></td>
-                                <td>
-                                  <span class="f-right"><a href="{{ path('login') }}">{% trans %}Login{% endtrans %}</a></span>
-                                </td>
                         </tr>
                 </table>
                 </form>
 
         </div> <!-- /login-box -->
 
-        <div id="login-bottom"></div>
 {% endblock %}
