--- a/src/Club/UserBundle/Resources/views/Auth/login.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/login.html.twig
@@ -1,12 +1,7 @@
-{% extends "ClubUserBundle:Auth:base.html.twig" %}
+{% extends "ClubLayoutBundle:Default:base_simple.html.twig" %}
 
 {% block body %}
-      <div id="login-top"></div>
-
         <div id="login-box">
-
-                <!-- Logo -->
-                <p class="nom t-center"><a href="{{ path('homepage') }}"><img src="{{ asset('bundles/clublayout/images/logo.png') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
 
                 <!-- Messages -->
                 {% include "ClubLayoutBundle:Default:flash.html.twig" %}
@@ -17,7 +12,7 @@
                 <form method="POST" action="{{ path('login_check') }}">
                 <table class="nom nostyle">
                         <tr>
-                                <td style="width:75px;"><label for="login-user"><strong>{% trans %}Username{% endtrans %}</strong></label></td>
+                                <td style="width:200px;"><label for="login-user"><strong>{% trans %}Username{% endtrans %}</strong></label></td>
                                 <td><input type="text" style="width: 300px;" name="_username" class="input-text" id="login-user" /></td>
                         </tr>
                         <tr>
@@ -37,7 +32,5 @@
                 </form>
 
         </div> <!-- /login-box -->
-
-        <div id="login-bottom"></div>
 
 {% endblock %}
