--- a/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
@@ -51,6 +51,6 @@
   </tbody>
 </table>
 
-{% include "ClubLayoutBundle:Default:paginator.html.twig" %}
+{% include "ClubPaginatorBundle:Paginator:paginator.html.twig" %}
 
 {% endblock %}
