--- a/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
@@ -44,5 +44,5 @@
   </tbody>
 </table>
 
-{% include "ClubLayoutBundle:Default:paginator.html.twig" %}
+{% include "ClubPaginatorBundle:Paginator:paginator.html.twig" %}
 {% endblock %}
