--- a/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
@@ -3,7 +3,17 @@
 {% block body %}
 <h2>{% trans %}Orders{% endtrans %}</h2>
 
-{% render "ClubShopBundle:AdminOrderFilter:getFilter" %}
+<!-- Actions -->
+<form method="post" action="">
+<div class="box-02 bottom box">
+  <strong>Search:</strong>
+  {{ form_widget(form.query, {'attr': {'class':'input-text'} }) }}
+  <input type="submit" value="OK" />
+</div> <!-- /box-02 -->
+{{ form_rest(form) }}
+</form>
+
+<div class="fix" style="height: 10px;"></div>
 
 <table class="style">
   <thead>
