--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -24,7 +24,8 @@
 
       {% include "ClubUserBundle:AdminUser:field.html.twig" with {'field_name':'member_number', 'field_text':'Number'|trans} %}
       {% include "ClubUserBundle:AdminUser:field.html.twig" with {'field_name':'first_name', 'field_text':'Name'|trans} %}
-      {% include "ClubUserBundle:AdminUser:field.html.twig" with {'field_name':'created_at', 'field_text':'Created at'|trans} %}
+      <th>{% trans %}Phone{% endtrans %}</th>
+      <th>{% trans %}Email{% endtrans %}</th>
       <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
@@ -43,7 +44,8 @@
       <td><input type="checkbox" name="ids[{{ user.id }}]"/></td>
       <td>{{ user.memberNumber }}</td>
       <td><a href="{{ path('admin_user_edit', {'id':user.id}) }}">{{ user.profile.firstName }} {{ user.profile.lastName }}</a></td>
-      <td>{{ user.createdAt|club_date }}</td>
+      <td>{% if user.profile.profilePhone %}{{ user.profile.profilePhone.phoneNumber }}{% endif %}</td>
+      <td>{% if user.profile.profileEmail %}{{ user.profile.profileEmail.emailAddress }}{% endif %}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_user_edit', { 'id':user.id })} %}
         {% include "ClubLayoutBundle:Default:ban_link.html.twig" with {'url':path('admin_user_ban', { 'id':user.id })} %}
@@ -54,7 +56,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">{% trans %}There are no users in the system.{% endtrans %}</td>
+    <td colspan="7">{% trans %}There are no users in the system.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
