Added search for email and phone.

--- a/src/Club/UserBundle/Resources/views/Filter/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/Filter/form.html.twig
@@ -10,6 +10,8 @@
   <form method="POST" action="{{ path('club_user_filter_filter') }}">
 
     {{ form_row(form.name) }}
+    {{ form_row(form.phone) }}
+    {{ form_row(form.email_address) }}
     {{ form_row(form.member_number) }}
     {{ form_row(form.min_age) }}
     {{ form_row(form.max_age) }}
