--- a/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
@@ -2,6 +2,10 @@
 
 {% block body %}
 
+<p class="box">
+  <a href="{{ path('club_welcome_blog_new') }}" class="btn-info"><span>{% trans %}Post blog{% endtrans %}</span></a>
+</p>
+
 {% if welcome.content is defined %}
 {{ welcome.content|raw }}
 {% endif %}
