--- a/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/form.html.twig
@@ -1,4 +1,5 @@
     {{ form_row(form.payment_method_name) }}
+    {{ form_row(form.priority) }}
 
     <p>
       {{ form_label(form.success_page) }}<br />
