--- a/src/Club/UserBundle/Resources/views/base.html.twig
+++ b/src/Club/UserBundle/Resources/views/base.html.twig
@@ -1,3 +1,3 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubLayoutBundle::base.html.twig" %}
 
 {% block header %}<h1>{% trans %}User{% endtrans %}</h1>{% endblock %}
