--- a/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
@@ -2,9 +2,11 @@
 
 {% block body %}
 
+{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 <p class="box">
   <a href="{{ path('club_welcome_blog_new') }}" class="btn-info"><span>{% trans %}Post blog{% endtrans %}</span></a>
 </p>
+{% endif %}
 
 {% if welcome.content is defined %}
 {{ welcome.content|raw }}
