--- a/src/Club/BookingBundle/Resources/public/css/booking_horizontal.css
+++ b/src/Club/BookingBundle/Resources/public/css/booking_horizontal.css
@@ -163,3 +163,14 @@ div#booking .link
 {
   cursor: pointer;
 }
+
+div#fields div {
+  padding-top: 5px;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+div#intervals div.interval {
+  text-align: center;
+  font-size: 13px;
+}
