--- a/src/Club/BookingBundle/Resources/views/Booking/viewTeam.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/viewTeam.html.twig
@@ -10,7 +10,7 @@
     <p><label>{% trans %}Date{% endtrans %}</label>{{ schedule.firstDate|club_date }}</p>
     <p><label>{% trans %}Time{% endtrans %}</label>{{ schedule.firstDate|club_time }} - {{ schedule.endDate|club_time }}</p>
     <p><label>{% trans %}Field{% endtrans %}</label>{{ field.name }}</p>
-    <p><label>{% trans %}Team{% endtrans %}</label>{{ schedule.team.teamName }}</p>
+    <p><label>{% trans %}Team{% endtrans %}</label>{{ schedule.teamCategory.teamName }}</p>
 
     {% if field.information %}
       <h3>{% trans %}Information{% endtrans %}</h3>
