--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -76,7 +76,7 @@
                         <div class="padding box">
 
                           <!-- Logo (Max. width = 200px) -->
-                          <p id="logo"><a href="{{ path('homepage') }}"><img src="{{ asset('bundles/clublayout/images/logo.png') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
+                          <p id="logo">{% render "ClubLayoutBundle:Misc:Logo" %}</p>
 
                           {% if is_granted('ROLE_ADMIN') %}
                           <!-- Search -->
