Added default batch value to empty.

--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -32,8 +32,9 @@
   <tfoot>
     <tr class="bg">
       <td colspan="7" class="arrow-01">
-        <select name="" class="input-text">
-          <option value="">{% trans %}Ban selected{% endtrans %}</option>
+        <select name="batch_option" class="input-text">
+          <option value=""></option>
+          <option value="ban">{% trans %}Ban selected{% endtrans %}</option>
         </select>&nbsp;<input type="submit" value="{% trans %}OK{% endtrans %}" />
       </td>
     </tr>
