Added reset password to admin batch

--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -35,6 +35,7 @@
         <select name="batch_option" class="input-text">
           <option value=""></option>
           <option value="ban">{% trans %}Ban selected{% endtrans %}</option>
+          <option value="password_expire">{% trans %}Password expire{% endtrans %}</option>
         </select>&nbsp;<input type="submit" value="{% trans %}OK{% endtrans %}" />
       </td>
     </tr>
