Added remove subscriptions batch.

--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -36,6 +36,7 @@
           <option value=""></option>
           <option value="ban">{% trans %}Ban selected{% endtrans %}</option>
           <option value="password_expire">{% trans %}Password expire{% endtrans %}</option>
+          <option value="subscription_expire">{% trans %}Subscription expire{% endtrans %}</option>
         </select>&nbsp;<input type="submit" value="{% trans %}OK{% endtrans %}" />
       </td>
     </tr>
