Fixed logo url.

--- a/src/Club/LayoutBundle/Resources/views/Misc/logo.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Misc/logo.html.twig
@@ -1,2 +1,2 @@
-<a href="{{ path(logo_url) }}"><img src="{{ asset(logo_path) }}" alt="{{ logo_title }}" title="{{ logo_title }}" /></a>
+<a href="{{ logo_url }}"><img src="{{ asset(logo_path) }}" alt="{{ logo_title }}" title="{{ logo_title }}" /></a>
 
