--- a/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% include "ClubUserBundle:AdminUser:header.html.twig" %}
 
-{% if gravatar_exists(user.profile.profileEmail.emailAddress) %}
+{% if user.profile.profileEmail and gravatar_exists(user.profile.profileEmail.emailAddress) %}
 <!-- Avatar -->
 <fieldset>
   <legend>Avatar</legend>
