--- a/src/Club/LayoutBundle/Resources/views/Default/base_simple.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base_simple.html.twig
@@ -49,7 +49,8 @@
                         <div class="padding box">
 
                                 <!-- Logo (Max. width = 200px) -->
-                                <p id="logo"><a href="{{ path('homepage') }}"><img src="{{ asset('bundles/clublayout/images/logo.png') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
+                                <p id="logo">{% render "ClubLayoutBundle:Misc:Logo" %}</p>
+
 
                         </div> <!-- /padding -->
 
