Fixed a link to clubmaster instead of the booking system.

--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -126,7 +126,7 @@
 
         <!-- Footer -->
         <div id="footer" class="box">
-          <p class="f-left">&copy; 2011 <a href="{{ path('homepage') }}">ClubMaster</a>, All Rights Reserved &reg;</p>
+          <p class="f-left"><a href="http://www.clubmaster.org" target="_open">ClubMaster</a></p>
           <p class="f-right">{% render "ClubUserBundle:Misc:versionBar" %}</p>
         </div> <!-- /footer -->
       </div> <!-- /main -->
