--- a/src/Club/TeamBundle/Resources/views/AdminLevel/edit.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminLevel/edit.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <form method="post" action="{{ path('club_team_adminlevel_edit', {'id':level.id}) }}">
-{% include "ClubTeamBundle:AdminLevel:form.html.twig" with {'form': form} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
 {% endblock %}
