--- a/src/Club/LayoutBundle/Resources/views/Default/form.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/form.html.twig
@@ -1,3 +1,7 @@
-  <p>{{ form_widget(form) }}</p>
-  {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+<fieldset>
+  {% if legend is defined %}<legend>{{ legend}}</legend>{% endif %}
 
+  <p>{{ form_widget(form) }}</p>
+</fieldset>
+
+{% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
