--- a/src/Club/ShopBundle/Resources/views/AdminCoupon/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCoupon/edit.html.twig
@@ -1,10 +1,9 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
-
 {% block body %}
 
 <form method="post" action="{{ path('club_shop_admincoupon_edit', {'id':coupon.id}) }}">
-{% include "ClubShopBundle:AdminCoupon:form.html.twig" with {'form': form} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
 {% endblock %}
