--- a/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
@@ -12,7 +12,7 @@
 <h2>{% trans %}Order Information{% endtrans %}</h2>
 
 <form method="post" action="{{ path('admin_shop_order_edit', {'id':order.id}) }}">
-{% include "ClubShopBundle:AdminOrder:form.html.twig" with {'form': form} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
 {% include "ClubShopBundle:Order:order_form.html.twig" %}
