--- a/src/Club/ShopBundle/Resources/views/AdminShipping/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminShipping/edit.html.twig
@@ -1,10 +1,9 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
-
 {% block body %}
 
 <form method="post" action="{{ path('admin_shop_shipping_edit', {'id':shipping.id}) }}">
-{% include "ClubShopBundle:AdminShipping:form.html.twig" with {'form': form} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
 {% endblock %}
