--- a/src/Club/BookingBundle/Resources/views/AdminInterval/new.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminInterval/new.html.twig
@@ -1,10 +1,9 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
-
 {% block body %}
 
 <form method="post" action="{{ path('club_booking_admininterval_new', {'field_id':field.id}) }}">
-{% include "ClubBookingBundle:AdminInterval:form.html.twig" with {'form': form} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
 {% endblock %}
