--- a/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
 <form method="post" action="{{ path('club_event_adminevent_new') }}">
-{% include "ClubEventBundle:AdminEvent:form.html.twig" with {'form': form} %}
+{% include "ClubEventBundle:AdminEvent:form.html.twig" %}
 </form>
 
 {% endblock %}
