--- a/src/Club/UserBundle/Resources/views/AdminUser/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/new.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <form method="post" action="{{ path('admin_user_create') }}">
-{% include "ClubUserBundle:AdminUser:form.html.twig" with {'form': form} %}
+{% include "ClubUserBundle:AdminUser:form.html.twig" %}
 </form>
 
 {% endblock %}
