--- a/src/Club/WelcomeBundle/Resources/views/Blog/new.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/new.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
 <form method="post" action="{{ path('club_welcome_blog_new') }}">
-{% include "ClubWelcomeBundle:Blog:form.html.twig" with {'form': form} %}
+{% include "ClubWelcomeBundle:Blog:form.html.twig" %}
 </form>
 
 {% endblock %}
