--- a/src/Club/EventBundle/Resources/views/AdminAttend/new.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/new.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <form method="post" action="{{ path('club_event_adminevent_new') }}">
-{% include "ClubEventBundle:AdminEvent:form.html.twig" with {'form': form} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
 {% endblock %}
