--- a/src/Club/EventBundle/Resources/views/AdminEvent/edit.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/edit.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
 <form method="post" action="{{ path('admin_event_event_edit', {'id':event.id}) }}">
-{% include "ClubEventBundle:AdminEvent:form.html.twig" with {'form': form} %}
+{% include "ClubEventBundle:AdminEvent:form.html.twig" %}
 </form>
 
 {% endblock %}
