--- a/src/Club/UserBundle/Resources/views/AdminLocation/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminLocation/edit.html.twig
@@ -1,10 +1,9 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-
 {% block body %}
 
 <form method="post" action="{{ path('admin_location_edit', {'id':location.id}) }}">
-{% include "ClubUserBundle:AdminLocation:form.html.twig" with {'form': form} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
 {% endblock %}
