--- a/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/edit.html.twig
@@ -19,7 +19,7 @@
 {% endif %}
 
 <form method="post" action="{{ path('admin_user_edit', {'id':user.id}) }}">
-  {% include "ClubUserBundle:AdminUser:form.html.twig" with {'form': form} %}
+  {% include "ClubUserBundle:AdminUser:form.html.twig" %}
 </form>
 
 {% endblock %}
