--- a/src/Club/UserBundle/Resources/views/Currency/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/Currency/new.html.twig
@@ -1,10 +1,9 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-
 {% block body %}
 
 <form method="post" action="{{ path('admin_currency_new') }}">
-{% include "ClubUserBundle:Currency:form.html.twig" with {'form': form} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
 {% endblock %}
