--- a/src/Club/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/index.html.twig
@@ -2,8 +2,12 @@
 
 {% block body %}
 
+<p class="box">
+  <a href="{{ path('club_user_usersetting_index') }}" class="btn-info"><span>{% trans %}Settings{% endtrans %}</span></a>
+</p>
+
 <form method="post" action="{{ path('user') }}">
-{% include "ClubUserBundle:User:form.html.twig" with {'form': form} %}
+{% include "ClubUserBundle:User:form.html.twig" %}
 </form>
 
 {% endblock %}
