--- a/src/Club/UserBundle/Resources/views/UserNote/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/UserNote/edit.html.twig
@@ -1,10 +1,9 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-
 {% block body %}
 
 <form method="post" action="{{ path('admin_user_note_edit', {'id':user_note.id}) }}">
-{% include "ClubUserBundle:UserNote:form.html.twig" with {'form': form} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
 {% endblock %}
