--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -22,7 +22,7 @@
       <td>{{ subscription.user.profile.firstName }} {{ subscription.user.profile.lastName }}</td>
       <td>{{ subscription.startDate|club_datetime }}</td>
       {% if subscription.expireDate == '' %}
-      <td>Never</td>
+      <td>{% trans %}Never{% endtrans %}</td>
       {% else %}
       <td>{{ subscription.expireDate|club_datetime }}</td>
       {% endif %}
