--- a/src/Club/MatchBundle/Resources/views/LeagueMatch/show.html.twig
+++ b/src/Club/MatchBundle/Resources/views/LeagueMatch/show.html.twig
@@ -6,7 +6,7 @@
 <p class="box">
   <a href="{{ path('club_match_matchcomment_new', { 'match_id':match.id }) }}" class="btn-info"><span>{% trans %}Add comment{% endtrans %}</span></a>
   {% if match.isOwner(app.user) %}
-  <a href="{{ path('club_match_match_delete', { 'id':match.id }) }}" class="btn-info"><span>{% trans %}Delete match{% endtrans %}</span></a>
+  <a href="{{ path('club_match_leaguematch_delete', { 'id':match.id }) }}" class="btn-info"><span>{% trans %}Delete match{% endtrans %}</span></a>
   {% endif %}
 </p>
 {% endif %}
