--- a/src/Club/MatchBundle/Resources/views/League/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/League/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <p class="box">
-  <a href="" class="btn-create"><span>{% trans %}Create match{% endtrans %}</span></a>
+  <a href="{{ path('club_match_match_new') }}" class="btn-create"><span>{% trans %}Insert match{% endtrans %}</span></a>
 </p>
 
 {% for league in leagues %}
