--- a/src/Club/MatchBundle/Resources/views/League/match.html.twig
+++ b/src/Club/MatchBundle/Resources/views/League/match.html.twig
@@ -4,7 +4,7 @@
       <td style="text-align: center;">
 
         {% if match.winner == match.teamOne %}<img src="{{ asset('bundles/clublayout/images/icons/16x16/award_star_gold_1.png') }}" />{% endif %}
-        <a href="{{ path('club_match_leaguematch_show', {'id':match.id}) }}">{{ match.displayResult }}</a>
+        <a href="{{ path('club_match_match_show', {'id':match.id}) }}">{{ match.displayResult }}</a>
         {% if match.winner == match.teamTwo %}<img src="{{ asset('bundles/clublayout/images/icons/16x16/award_star_gold_1.png') }}" />{% endif %}
 
       </td>
