Added request form.

--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
@@ -1,1 +1,42 @@
-Hello !!
+{% extends "ClubRequestBundle::base.html.twig" %}
+
+{% block body %}
+
+<p class="box">
+  <a href="{{ path('club_request_playermarket_new') }}" class="btn-info"><span>{% trans %}Create request{% endtrans %}</span></a>
+</p>
+
+<table class="style">
+  <thead>
+    <tr class="bg">
+      <th>Time</th>
+      <th>User</th>
+      <th>Action</th>
+    </tr>
+  <thead>
+  <tfoot>
+    <tr class="bg">
+      <td colspan="3">&#160;</td>
+    </tr>
+  </tfoot>
+  <tbody>
+  {% for item in market %}
+    <tr>
+      <td>{{ schedule.firstDate|date('H:i') }} - {{ schedule.endDate|date('H:i') }}</td>
+      <td>{{ schedule.teamCategory.teamName }} ( {{ schedule.users|length }}/{{ schedule.maxAttend }} )</td>
+      <td>{{ schedule.location.locationName }}</td>
+      {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+      <td>
+        {% include "ClubLayoutBundle:Default:unattend_link.html.twig" with {'url':path('club_team_team_unattend', { 'id':schedule.id })} %}
+      </td>
+      {% endif %}
+    </tr>
+  {% else %}
+    <tr>
+      <td colspan="3">There are not items in the players market.</td>
+    </tr>
+  {% endfor %}
+  </tbody>
+</table>
+
+{% endblock %}
