Added more paramconverters.

--- a/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
@@ -29,7 +29,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">There are no attends at the time</td>
+    <td colspan="5">{% trans %}There are no attends at the time{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
