Fixed checkout links.

--- a/src/Club/ShopBundle/Resources/views/Checkout/checkouttop.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/checkouttop.html.twig
@@ -1,6 +1,21 @@
-        <span class="label {% if page == 'view' %}label-03{% else %}label-06{% endif %}"><a href="{{ path('shop_checkout') }}">{% trans %}View cart{% endtrans %}</a></span>
-        <span class="label {% if page == 'shipping' %}label-03{% else %}label-06{% endif %}"><a href="{{ path('shop_checkout_shipping') }}">{% trans %}Choose shipping{% endtrans %}</a></span>
-        <span class="label {% if page == 'payment' %}label-03{% else %}label-06{% endif %}"><a href="{{ path('shop_checkout_payment') }}">{% trans %}Choose payment{% endtrans %}</a></span>
-        <span class="label {% if page == 'review' %}label-03{% else %}label-06{% endif %}"><a href="{{ path('shop_checkout_review') }}">{% trans %}Review order{% endtrans %}</a></span>
-        <span class="label label-06">{% trans %}Done{% endtrans %}</span>
+<span class="label {% if page == 'view' %}label-03{% else %}label-06{% endif %}"><a href="{{ path('shop_checkout') }}">{% trans %}View cart{% endtrans %}</a></span>
+
+{% if cart.cartProducts|length > 0 %}
+<span class="label {% if page == 'shipping' %}label-03{% else %}label-06{% endif %}"><a href="{{ path('shop_checkout_shipping') }}">{% trans %}Choose shipping{% endtrans %}</a></span>
+{% else %}
+<span class="label label-06">{% trans %}Choose shipping{% endtrans %}</span>
+{% endif %}
+
+{% if cart.shipping %}<span class="label {% if page == 'payment' %}label-03{% else %}label-06{% endif %}"><a href="{{ path('shop_checkout_payment') }}">{% trans %}Choose payment{% endtrans %}</a></span>
+{% else %}
+<span class="label label-06">{% trans %}Choose payment{% endtrans %}</span>
+{% endif %}
+
+{% if cart.paymentMethod %}
+<span class="label {% if page == 'review' %}label-03{% else %}label-06{% endif %}"><a href="{{ path('shop_checkout_review') }}">{% trans %}Review order{% endtrans %}</a></span>
+{% else %}
+<span class="label label-06">{% trans %}Review order{% endtrans %}</span>
+{% endif %}
+
+<span class="label label-06">{% trans %}Done{% endtrans %}</span>
 
