--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
@@ -2,9 +2,11 @@
 
 {% block body %}
 
+{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 <p class="box">
   <a href="{{ path('club_request_playermarket_new') }}" class="btn-info"><span>{% trans %}Create request{% endtrans %}</span></a>
 </p>
+{% endif %}
 
 <table class="style">
   <thead>
